<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/soccer"
            android:textColor="@color/colorPrimary" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rg_one"
            style="@style/AnswerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_a"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:id="@+id/blue_and_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_b"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_c"
                android:textColor="@color/myFavBlue" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rg_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_a"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_b"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:id="@+id/brazil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_c"
                android:textColor="@color/myFavBlue" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_three"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rg_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_a"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:id="@+id/five_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_b"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_c"
                android:textColor="@color/myFavBlue" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_four"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rg_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four_a"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four_b"
                android:textColor="@color/myFavBlue" />

            <RadioButton
                android:id="@+id/liverpool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four_c"
                android:textColor="@color/myFavBlue" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_five"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_a"
                android:textColor="@color/myFavBlue" />

            <CheckBox
                android:id="@+id/checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_b"
                android:textColor="@color/myFavBlue" />

            <CheckBox
                android:id="@+id/checkbox_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_c"
                android:textColor="@color/myFavBlue" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_six"
            style="@style/QuestionStyle"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/premier_league"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/six_hint"/>

        <Button
            android:id="@+id/submit"
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="submit"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/number_of_correct"
            style="@style/AnswerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#26A69A" />

        <Button
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reset"
            android:text="@string/reset" />

    </LinearLayout>

</ScrollView>